update in project

--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello!</title>
+    <title>Lee Myers Projects !</title>
     <meta name="description" content="description" />
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
     <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
   </head>
   <body>
-    <!-- <img src="./assets/HHAP5174 copy.jpeg" alt="poppy flower" /> -->
+    <div class="header">
+      <h1>Lee Myers</h1>
+      <div>
+        <ul>
+          <li>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+          </li>
+          <li>
+            <a href="#online-reputation-management"
+              >Online Reputation Management</a
+            >
+          </li>
+          <li>
+            <a href="#social-media-marketing">Social Media Marketing</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
