--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello!</title>
+  <title>Lee's Project Page</title>
   <meta name="description" content="description" />
   <meta name="author" content="author" />
   <meta name="keywords" content="keywords" />
@@ -14,7 +14,7 @@
 
   <!-- Header -->
   <div class="header">
-    <h1> Lee Myers </h1>
+    <h1><img src="/assets/lee-m.JPG"> Lee Myers</h1> 
     <div>
       <ul>
         <li>
@@ -38,7 +38,11 @@
   <div id="about" class="wrap">
     <h2>About Me</h2>
     <p>
-      My name and about me.
+      Born and raised in Long Beach with a longing to be my best self. I am learning the art of coding
+       all while taking a break from everything I love. Chiseling and grinding myself into the marble 
+       structure that can support all of your wildest coding needs. On this page, I have my first project 
+       that  was able to accomplish via the coding camp. Thank you for taking a moment to learn about me from
+       the "about me" section. 
     </p>
   </div>
 
@@ -46,8 +50,8 @@
   <div id="projects" class="wrap">
     <h2>Projects</h2>
     <!-- top level wrapper -->
-    <a class="project-list">
-      <a href="https://leemyers16.github.io/Lee-Myers-Unique-Project/" target="_blank" id = "first-project" class="large tile">
+    <div class="project-list">
+      <a href="https://leemyers16.github.io/Lee-Myers-Unique-Project/" id = "first-project" class="large tile">
           My first project
       </a>
       <br/>
@@ -69,9 +73,9 @@
   <!-- Contact Me Section-->
   <div id="contact" class="wrap">
       <ul>
-        <li> <a href="">Facebook</a></li>
-        <li> <a href="">Google</a></li>
-        <li> <a href="">Phone Number</a></li>
+        <li> <a href="https://www.facebook.com/">Facebook</a></li>
+        <li> <a href="https://www.google.com/">Google</a></li>
+        <li> <p> Cell number:(562)252-2737</p>
       </ul>
   </div>
 
