--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Header -->
   <div class="header">
-    <h1><img src="/assets/lee-m.JPG"> Lee Myers</h1> 
+    <h1><img src="./assets/lee-m.JPG"> Lee Myers</h1> 
     <div>
       <ul>
         <li>
